dealing another div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
     <div class="main-page">
         <div class="text-area">
             <h1>Welcome To</h1>
@@ -16,11 +18,32 @@
             <div class="discription">
                 <h3>World-class web developer</h3>
                 <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, alias aut optio accusamus suscipit harum perspiciatis, vitae esse, deleniti quaerat voluptas doloremque magnam dolorem pariatur? Lorem ipsum dolor sit amet.</p>
+                <a href="https://mohammed-rakib.github.io/my-second-website/" target="_blank">Hire Me</a>
             </div>
         </div>
         <div class="image">
             <img src="images/my-bg.png">
         </div>
     </div>
+   </div>
+    <!------------second-div-->
+    <div class="container-final">
+        <div class="main-page">
+            <div class="image">
+                <img src="images/my-bg.png">
+            </div>
+            <div class="text-area">
+                <h1>Dream Big</h1>
+                <div class="discription">
+                    <h3>World-class web developer</h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, alias aut optio accusamus suscipit harum perspiciatis, vitae esse, deleniti quaerat voluptas doloremque magnam dolorem pariatur? Lorem ipsum dolor sit amet.</p>
+                    <a href="https://mohammed-rakib.github.io/my-second-website/" target="_blank">Download Resume</a>
+                </div>
+            </div>
+        </div>
+        <img src="images/dream-bg.png"class="side-image">
+       </div>
+    
+
 </body>
 </html>
