--- a/index.html
+++ b/index.html
@@ -36,14 +36,33 @@
                 <h1>Dream Big</h1>
                 <div class="discription">
                     <h3>World-class web developer</h3>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, alias aut optio accusamus suscipit harum perspiciatis, vitae esse, deleniti quaerat voluptas doloremque magnam dolorem pariatur? Lorem ipsum dolor sit amet.</p>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, alias aut optio accusamus suscipit harum perspiciatis, vitae esse, deleniti quaerat voluptas doloremque magnam dolorem pariatur? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
                     <a href="https://mohammed-rakib.github.io/my-second-website/" target="_blank">Download Resume</a>
                 </div>
             </div>
         </div>
         <img src="images/dream-bg.png"class="side-image">
        </div>
-    
-
+    <!-----Experience-div----->
+    <div class="experience">
+        <h1 class="main-header">Experiences</h1>
+        <img src="images/image 14.png" class="image-exp">
+    <div class="main-Div">
+        <div class="right-col">
+            <h1>Full Stack Web Developer</h1>
+            <h4>2016-Present! Pro Level Developer</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nemo, atque explicabo officiis illo aut commodi consequuntur, laboriosam quaerat quasi fuga fugiat dolorum! repudiandae sunt, quae aliquam esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <br><br><br>
+        </div>
+        <div class="left-col">
+            <h1>Baby Web Developer</h1>
+            <h4>2020-2021! Programming Hero Learner</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora eveniet enim non reiciendis quaerat praesentium qui inventore neque beatae laborum! Lorem ipsum dolor sit amet consectetur Lorem, ipsum.
+            </p>
+            <br><br><br>
+        </div>
+    </div>
+    </div>
+    <h5>&copy; Mohammed Rakib,a Programming Hero antivate</h5>
 </body>
 </html>
